fixed search z-index

--- a/src/Header.css
+++ b/src/Header.css
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
+    z-index: 100;
 }
 
 .header-left > input {
